--- a/application/assets/css/group_info.css
+++ b/application/assets/css/group_info.css
@@ -70,3 +70,15 @@
     top:-34px;
     left:37px;
 }
+
+.percent_male_container{
+    position:absolute;
+}
+
+.percent_female_container{
+    
+}
+
+.total_percent_container{
+    
+}
