--- a/application/assets/css/group_info.css
+++ b/application/assets/css/group_info.css
@@ -56,13 +56,10 @@
     position: relative;
     text-align: left;
     border:1px solid lightgray;
-    top:15px;
+    margin-top:20px;
 }
 
 .show_percent{
-    position:absolute;
-    top:1px;
-    left:40px;
     font-weight: bold;
 }
 
