--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -441,7 +441,7 @@ a {
     right: 321px;
     top: -48px;
     border: 1px solid lightgray;
-    background: lightGoldenrodYellow;
+    background: #FEFFE8;
     padding: 9px;
     color: gray;
 }
@@ -598,7 +598,7 @@ a {
     top: -48px;
     right: 212px;
     border: 1px solid lightgray;
-    background: lightGoldenrodYellow;
+    background: #FEFFE8;
     padding: 9px;
     color: gray;
 }
