--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -207,7 +207,7 @@ a {
 .data_container {
     width: 100%;
     height: 100%;
-    background-color: #f9f9f9;
+    background: -webkit-linear-gradient(top, #F3F6FF, white);
     display: none;
 }
 .graph_data {
