--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -1,14 +1,17 @@
 /* ----------------------------------------- percent classes ----------------------------- */
 .percent_bar_total {
     background-color: blueviolet;
+    border-radius: 3px;
 }
 
 .percent_bar_male {
     background-color: #3FA9F5;
+    border-radius: 3px;
 }
 
 .percent_bar_female {
     background-color: #E80C7A;
+    border-radius: 3px;
 }
 
 /* ---------------------------------------------------- day bar graph classes ------------------------ */
