--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -42,6 +42,7 @@
 .attending_graph{
     position:absolute;
     border:1px solid gray;
+    border-radius: 5px;
     width:200px;
     height: 30px;
     left:35px;
