--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -490,6 +490,7 @@ a {
     height: auto;
     margin: auto;
     border: 1px solid lightgray;
+    border-radius: 5px;
     color: #4E4E4E;
     padding-top: 5px;
     padding-bottom: 5px;
