--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -177,6 +177,7 @@ a {
     color: black;
     text-align: center;
     padding: 10px;
+    border-radius: 5px;
 }
 .tab_selected {
     background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
@@ -446,6 +447,7 @@ a {
     background: -webkit-linear-gradient(top, #F3F6FF, white);
     padding: 9px;
     color: gray;
+    border-radius: 5px;
 }
 #friends_plans_panel {
     width: 210px;
@@ -604,6 +606,7 @@ a {
     background: -webkit-linear-gradient(top, #F3F6FF, white);
     padding: 9px;
     color: gray;
+    border-radius: 5px;
 }
 .make_plan {
     position: absolute;
