--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -262,6 +262,7 @@ a{
     background: -webkit-gradient(linear,left top,left bottom,from(#EEE),to(white));
     padding-left:15px;
     padding-right:15px;
+    border-radius: 5px;
 }
 
 .suggested_active{
