--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -341,6 +341,7 @@ a{
     width:50%;
     border-top:1px solid #CCC;
     padding: 5px;
+    border: 1px solid lightgrey;
 }
 
 .profile_body_text{
