--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -331,6 +331,10 @@ h3 {
 .in-field_block {
     position:relative;
     width: 275px;
+    
+}
+
+.in-field_block label{
     margin-top:12px;
 }
 
