--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -328,6 +328,7 @@ h3 {
 }
 
 /*  in-field_bloc_signup is used exclusively for the signup divs. they require different styling than everything else*/
+/* wtf */
 .in-field_block_signup{
     position:relative;
     height: 30px;
