--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -343,6 +343,11 @@ h3 {
     color: #999999;
 }
 
+.in-field_block_signup input {
+    width: 100%;
+    height: 100%;
+}
+
 .log_in_bar{
     display:inline-block;
     width:210px;
