--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -167,8 +167,8 @@ h3 {
 
 #leftside{
     position:relative;
-    width:600px;
-    height:500px;
+    width:560px;
+    height:412px;
     float:left;
 
     -webkit-border-top-left-radius: 10px;
@@ -194,7 +194,7 @@ h3 {
 #left_video{
     position:relative;
     background-color: #ccc;
-    height: 360px;
+    height: 310px;
     width: 100%;
 }
 
@@ -202,7 +202,7 @@ h3 {
     position:relative;
     width:300px;
     padding-left:30px;
-    float: left;
+    float: right;
 }
 
 #right_inner{
