--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -62,9 +62,9 @@
 /* ----------------------------------- two percentage bar classes ---------------------------------------- */
 .two_bar_male {
     background-color: #3FA9F5;
-    border-radius: 5px 0px 0px 5px;
+    border-radius: 5px
 }
 .two_bar_female {
     background-color: #E80C7A;
-    border-radius: 0px 5px 5px 0px;
+    border-radius: 5px;
 }
