--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -287,7 +287,7 @@ a{
     height:auto;
     width: 48%;
     padding:10px;
-    background-color:white;
+    background:-webkit-linear-gradient(top, white, #F3F6FF);
 }
 
 .edit_box{
