--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -225,7 +225,13 @@ a {
     padding: 4px;
     position: absolute;
     border: 1px solid lightgray;
-    background:-webkit-linear-gradient(top, #8AE28F, #22A228);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8AE28F), to(#22A228));
+    background: -webkit-linear-gradient(top, #8AE28F, #22A228);
+    background: -moz-linear-gradient(top, #8AE28F, #22A228);
+    background: -o-linear-gradient(top, #8AE28F, #22A228);
+    background: -ms-linear-gradient(top, #8AE28F, #22A228);
+    background:linear-gradient(top, #8AE28F, #22A228);
+
     color: white;
     bottom: 0px;
 }
